--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server.port: 8081
 
-spring.config.import: "configserver:"
+#spring.config.import: "configserver:"
 app.config-server: localhost
 
 management:
@@ -14,16 +14,25 @@ management:
 
 
 spring:
-  cloud.config:
-    failFast: true
-    retry:
-      initialInterval: 3000
-      multiplier: 1.3
-      maxInterval: 10000
-      maxAttempts: 20
-    uri: http://${app.config-server}:8888
+#  cloud.config:
+#    failFast: true
+#    retry:
+#      initialInterval: 3000
+#      multiplier: 1.3
+#      maxInterval: 10000
+#      maxAttempts: 20
+#    uri: http://${app.config-server}:8888
   application:
     name: user
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: postgres
+    url: jdbc:postgresql://localhost:5432/test_db
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL81Dialect
 
 ---
 spring.config.activate.on-profile: docker
