--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,40 +1,33 @@
 server.port: 8081
+spring.application.name: user
 
-#spring.config.import: "configserver:"
+spring.config.import: "configserver:"
 app.config-server: localhost
-
-management:
-  endpoint:
-    gateway:
-      enabled: true
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-
+app.database: localhost
 
 spring:
-#  cloud.config:
-#    failFast: true
-#    retry:
-#      initialInterval: 3000
-#      multiplier: 1.3
-#      maxInterval: 10000
-#      maxAttempts: 20
-#    uri: http://${app.config-server}:8888
-  application:
-    name: user
   datasource:
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://${app.database}:5432/test_db
     username: postgres
     password: postgres
-    url: jdbc:postgresql://localhost:5432/test_db
   jpa:
+    hibernate:
+      ddl-auto: create
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL81Dialect
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  cloud.config:
+    failFast: true
+    retry:
+      initialInterval: 3000
+      multiplier: 1.3
+      maxInterval: 10000
+      maxAttempts: 20
+    uri: http://${app.config-server}:8888
 
 ---
 spring.config.activate.on-profile: docker
 
 app.config-server: config-server
+app.database: postgres
